--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,27 @@
 @import "tailwindcss";
 
 :root {
-  --background: #fafaf9;
-  --foreground: #0f172a;
+  --background: #fafaf9;  /** stone-50 */
+  --background-muted: #e7e5e4; /** stone-200*/
+  --foreground: #0f172a; /** slate-900*/
+  --foreground-muted: #475569 /** slate-600*/
 }
 
 @theme inline {
   --color-background: var(--background);
+  --color-background-muted: var(--background-muted);
   --color-foreground: var(--foreground);
+  --color-foreground-muted: var(--foreground-muted);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #1e293b;
-    --foreground: #fafafa;
+    --background: #1e293b; /** slate-800*/
+    --background-muted: #334155; /** slate-700*/
+    --foreground: #fafafa; /** neutral-50*/
+    --foreground-muted: #e5e5e5 /** neutral-200*/
   }
 }
 
